--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Banner Magic web application.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "magic": "node app.js"
   },
   "repository": {
     "type": "git",
