--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/stevenrobertsdev/Banner_Magic#readme",
   "dependencies": {
+    "adm-zip": "^0.4.11",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
