--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "magic_DC": "node app.js -t=deals -s=cat",
-    "magic_DH": "node app.js -t=deals -s=hp",
-    "magic_DST": "node app.js -t=deals -s=st",
-    "magic_OOC": "node app.js -t=online_offers -s=cat",
-    "magic_OOH": "node app.js -t=online_offers -s=hp",
-    "magic_HOC": "node app.js -t=hot_offers -s=cat"
+    "magic_DLHS": "node app.js -t=deals -s=lhs",
+    "magic_DSTS": "node app.js -t=deals -s=sts",
+    "magic_DSTL": "node app.js -t=deals -s=stl"
   },
   "repository": {
     "type": "git",
